src/main/java/com/example/customerinformationsystem/error/NoCustomersToSaveException.java
package com.example.customerinformationsystem.error;

public class NoCustomersToSaveException extends RuntimeException {

    public NoCustomersToSaveException(String message) {
        super(message);
    }
}
